...
        android:layout_marginTop="635dp"
        android:backgroundTint="#FF80AB"
        android:clickable="true"
        android:src="@drawable/ic_person_add_white_24dp" />

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</android.support.design.widget.CoordinatorLayout>
